--- a/src/dotnet.ts.react/tsconfig.json
+++ b/src/dotnet.ts.react/tsconfig.json
@@ -1,14 +1,22 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "noImplicitAny": false,
-        "module": "commonjs",
-        "target": "es5",
-        "jsx": "react",
-        "lib": ["es5", "es6", "dom"]
+      "sourceMap": true,
+      "target": "es5",
+      "jsx": "react",
+      "module": "es6",
+      "moduleResolution": "node",
+      "experimentalDecorators": true,
+      "declaration": false,
+      "removeComments": true,
+      "noImplicitReturns": true,
+      "noUnusedLocals": true,
+      "strict": true,
+      "outDir": "build",
+      "lib": ["es6", "es7", "dom"],
+      "baseUrl": "src",
+      "paths": {
+        "app/*": ["./ReactApp/*"]
+      }
     },
-    "include": [
-        "./src/**/*"
-    ]
-}
+    "exclude": ["dist", "build", "node_modules"]
+  }
