--- a/src/dotnet.ts.react/dotnet.ts.react.nuspec
+++ b/src/dotnet.ts.react/dotnet.ts.react.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Arragro.Dotnet.TS.React.Project.Template</id>
-    <version>1.0.0</version>
+    <version>0.0.6-alpha</version>
     <description>
       Creates Arragro Dotnet Core AspNet Typescript React Webpack project.
     </description>
@@ -25,9 +25,9 @@
     <file src="ReactApp\App.tsx" target="content\ReactApp\App.tsx" />
     <file src="ReactApp\index.tsx" target="content\ReactApp\index.tsx" />
     <file src="ReactApp\scss\site.scss" target="content\ReactApp\scss\site.scss" />
-    <file src="ReactApp\Containers\AnotherButtonClicker.tsx" target="content\ReactApp\Containers\AnotherButtonClicker.tsx" />
-    <file src="ReactApp\Containers\HomePage.tsx" target="content\ReactApp\Containers\HomePage.tsx" />
-    <file src="ReactApp\Components\ButtonClicker.tsx" target="content\ReactApp\Components\ButtonClicker.tsx" />
+    <file src="ReactApp\Containers\AnotherButtonClicker.tsx" target="content\ReactApp\containers\AnotherButtonClicker.tsx" />
+    <file src="ReactApp\Containers\HomePage.tsx" target="content\ReactApp\containers\HomePage.tsx" />
+    <file src="ReactApp\Components\ButtonClicker.tsx" target="content\ReactApp\components\ButtonClicker.tsx" />
     <file src="Views\Home\Index.cshtml" target="content\Views\Home\Index.cshtml" />
     <file src=".babelrc" target="content\.babelrc" />
     <file src="dotnet.ts.react.csproj" target="content\dotnet.ts.react.csproj" />
@@ -37,6 +37,7 @@
     <file src="Program.cs" target="content\Program.cs" />
     <file src="Startup.cs" target="content\Startup.cs" />
     <file src="tsconfig.json" target="content\tsconfig.json" />
+    <file src="tslint.json" target="content\tslint.json" />
     <file src="webpack.config.js" target="content\webpack.config.js" />
   </files>
 </package>
