--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,16 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "build",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "build",
+                "${workspaceFolder}/src/dotnet.ts.react/dotnet.ts.react.csproj"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
             "taskName": "build",
             "command": "dotnet",
             "type": "process",
