Extended the base template with a layout and base, incorporated formsy
Also included compression middleware and webpack compresssion

--- a/src/dotnet.ts.react/package.json
+++ b/src/dotnet.ts.react/package.json
@@ -37,10 +37,16 @@
   },
   "homepage": "https://github.com/Arragro/dotnet.ts.react#readme",
   "dependencies": {
+    "bootstrap": "^4.0.0",
+    "classnames": "^2.2.5",
+    "formsy-react": "^1.1.4",
+    "formsy-react-components": "^1.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-s-alert": "^1.4.1",
+    "reactstrap": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.3.5",
@@ -48,6 +54,8 @@
     "@types/react-hot-loader": "^3.0.6",
     "@types/react-router": "^4.0.23",
     "@types/react-router-dom": "^4.2.6",
+    "@types/react-s-alert": "^1.3.1",
+    "@types/reactstrap": "^5.0.20",
     "@types/webpack": "^3.0.14",
     "@types/webpack-env": "^1.13.5",
     "aspnet-prerendering": "^3.0.1",
@@ -58,9 +66,10 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.4.0",
     "babel-preset-react": "^6.24.1",
-    "concurrently": "^3.5.1",
     "compression-webpack-plugin": "^1.1.10",
+    "concurrently": "^3.5.1",
     "cross-env": "^5.0.5",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.10",
@@ -74,8 +83,8 @@
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.8.1",
-    "url-loader": "^1.0.1",
     "uglifyjs-webpack-plugin": "^1.2.2",
+    "url-loader": "^1.0.1",
     "webpack": "^3.11.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-externals-plugin": "^1.0.0",
