--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,15 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+       
         {
-            "name": ".NET Core Launch (web)",
+            "name": ".NET Core Attach",
+            "type": "coreclr",
+            "request": "attach",
+            "processId": "${command:pickProcess}"
+        },
+        {
+            "name": ".NET Core Launch (web) react",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -37,20 +44,13 @@
             }
         },
         {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}"
-        }
-    ,
-        {
-            "name": ".NET Core Launch (web)",
+            "name": ".NET Core Launch (web) react-redux",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/src/dotnet.ts.react/bin/Debug/netcoreapp2.0/dotnet.ts.react.dll",
+            "program": "${workspaceFolder}/src/dotnet.ts.react.redux/bin/Debug/netcoreapp2.0/dotnet.ts.react.redux.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/src/dotnet.ts.react",
+            "cwd": "${workspaceFolder}/src/dotnet.ts.react.redux",
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart",
             "launchBrowser": {
@@ -73,12 +73,6 @@
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
             }
-        },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}"
         }
     ]
 }
