Further work towards redux and thunk api interaction

--- a/src/dotnet.ts.react.redux/tsconfig.json
+++ b/src/dotnet.ts.react.redux/tsconfig.json
@@ -16,7 +16,9 @@
       "baseUrl": "ReactApp",
       "paths": {
         "app/*": ["./*"],
-        "redux/*": ["./redux/*"]
+        "redux/*": ["./redux/*"],
+        "models/*": ["./models/*"],
+        "utils/*": ["./utils/*"]
       }
     },
     "exclude": ["dist", "build", "node_modules"]
