--- a/src/dotnet.ts.react.redux/package.json
+++ b/src/dotnet.ts.react.redux/package.json
@@ -39,8 +39,10 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
+    "domain-task": "^3.0.3",
     "formsy-react": "^1.1.4",
     "formsy-react-components": "^1.0.0",
+    "js-cookie": "^2.2.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
@@ -55,14 +57,15 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
+    "@types/js-cookie": "^2.1.0",
     "@types/node": "9.4.6",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
     "@types/react-hot-loader": "^3.0.6",
     "@types/react-redux": "5.0.15",
     "@types/react-router": "^4.0.23",
-    "@types/react-router-redux": "^5.0.12",
     "@types/react-router-dom": "^4.2.6",
+    "@types/react-router-redux": "^5.0.12",
     "@types/react-s-alert": "^1.3.1",
     "@types/reactstrap": "^5.0.20",
     "@types/redux-actions": "2.2.4",
@@ -78,8 +81,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.4.0",
     "babel-preset-react": "^6.24.1",
-    "concurrently": "^3.5.1",
     "compression-webpack-plugin": "^1.1.10",
+    "concurrently": "^3.5.1",
     "cross-env": "^5.0.5",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.10",
@@ -94,8 +97,8 @@
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.8.1",
-    "url-loader": "^1.0.1",
     "uglifyjs-webpack-plugin": "^1.2.2",
+    "url-loader": "^1.0.1",
     "webpack": "^3.11.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-externals-plugin": "^1.0.0",
