--- a/src/dotnet.ts.react/package.json
+++ b/src/dotnet.ts.react/package.json
@@ -5,16 +5,9 @@
   "main": "dist/main.js.js",
   "scripts": {
     "lint": "tslint -e **/node_modules/** -e **/dist/** -e **/typings/** -t codeFrame **/*.ts ",
-    "build": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --env=prod -p --progress --profile --colors",
-    "build-lib": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --env=prod --config ./webpack-lib.production.config.js -p --progress --profile --colors",
-    "build:dev": "webpack --progress --profile --colors",
-    "prepush": "npm run lint && npm run build",
-    "prepush-lib": "npm run lint && npm run build-lib",
-    "publish-prod": "npm run prepush-lib && npm pack",
-    "build-dev": "cross-env NODE_ENV=development node --trace-warnings --trace-deprecation -r babel-register ./node_modules/webpack/bin/webpack --progress --profile --colors",
-    "build-prod": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --env=prod --progress --profile --colors --display-error-details",
-    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.dll.config.js --progress --profile --colors",
-    "build-dll-dev": "npm run build-dll && npm run build-dev",
+    "build-dev": "webpack --progress --profile",
+    "build-prod": "webpack --run-prod --progress --profile",
+    "prepush": "npm run lint && npm run build-prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
@@ -37,59 +30,57 @@
   },
   "homepage": "https://github.com/Arragro/dotnet.ts.react#readme",
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "classnames": "^2.2.5",
+    "bootstrap": "^4.1.1",
+    "classnames": "^2.2.6",
     "formsy-react": "^1.1.4",
     "formsy-react-components": "^1.0.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-s-alert": "^1.4.1",
-    "reactstrap": "^5.0.0"
+    "reactstrap": "^6.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.3.5",
-    "@types/react-dom": "^16.0.4",
-    "@types/react-hot-loader": "^3.0.6",
-    "@types/react-router": "^4.0.23",
-    "@types/react-router-dom": "^4.2.6",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-router": "^4.0.28",
+    "@types/react-router-dom": "^4.2.7",
     "@types/react-s-alert": "^1.3.1",
-    "@types/reactstrap": "^5.0.20",
-    "@types/webpack": "^3.0.14",
-    "@types/webpack-env": "^1.13.5",
+    "@types/reactstrap": "^6.0.0",
     "aspnet-prerendering": "^3.0.1",
-    "aspnet-webpack": "^2.0.3",
+    "aspnet-webpack": "^3.0.0",
     "aspnet-webpack-react": "^3.0.0",
-    "awesome-typescript-loader": "^3.4.1",
+    "awesome-typescript-loader": "^5.2.0",
+    "autoprefixer": "^8.6.4",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-minify": "^0.4.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-minify": "^0.4.3",
     "babel-preset-react": "^6.24.1",
-    "compression-webpack-plugin": "^1.1.10",
-    "concurrently": "^3.5.1",
-    "cross-env": "^5.0.5",
+    "compression-webpack-plugin": "^1.1.11",
     "css-hot-loader": "^1.3.9",
-    "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
-    "node-sass": "^4.8.3",
-    "postcss-loader": "^2.1.3",
-    "react-hot-loader": "^3.1.3",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.8.1",
-    "uglifyjs-webpack-plugin": "^1.2.2",
+    "glob-all": "^3.1.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
+    "react-hot-loader": "^4.3.3",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "tslint": "^5.10.0",
+    "tslint-config-standard": "^7.1.0",
+    "typescript": "^2.9.2",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-externals-plugin": "^1.0.0",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-merge": "^4.1.2",
-    "webpack-node-externals": "^1.6.0"
+    "webpack": "^4.14.0",
+    "webpack-command": "^0.4.0",
+    "webpack-hot-middleware": "^2.22.2"
   }
 }
