--- a/src/dotnet.ts.react/tsconfig.json
+++ b/src/dotnet.ts.react/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
       "sourceMap": true,
+      "keyofStringsOnly": true, 
       "target": "es5",
       "jsx": "react",
       "module": "es6",
