Installed hoek to prevent security warning from github

--- a/src/dotnet.ts.react/package.json
+++ b/src/dotnet.ts.react/package.json
@@ -53,8 +53,8 @@
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^3.0.0",
     "aspnet-webpack-react": "^3.0.0",
-    "awesome-typescript-loader": "^5.2.0",
     "autoprefixer": "^8.6.4",
+    "awesome-typescript-loader": "^5.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -66,6 +66,7 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "glob-all": "^3.1.0",
+    "hoek": "^5.0.3",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
