--- a/src/dotnet.ts.react.redux/package.json
+++ b/src/dotnet.ts.react.redux/package.json
@@ -45,7 +45,9 @@
     "react-s-alert": "^1.4.1",
     "reactstrap": "^6.2.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typesafe-actions": "^2.0.4",
+    "utility-types": "^2.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
@@ -63,8 +65,8 @@
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^3.0.0",
     "aspnet-webpack-react": "^3.0.0",
-    "awesome-typescript-loader": "^5.2.0",
     "autoprefixer": "^8.6.4",
+    "awesome-typescript-loader": "^5.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -92,6 +94,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.14.0",
     "webpack-command": "^0.4.0",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2"
   }
 }
