--- a/src/dotnet.ts.react.redux/package.json
+++ b/src/dotnet.ts.react.redux/package.json
@@ -46,8 +46,7 @@
     "reactstrap": "^6.2.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "typesafe-actions": "^2.0.4",
-    "utility-types": "^2.0.0"
+    "typesafe-actions": "^2.0.4"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
